<resources>
    <string name="app_name" translatable="false">OpenRoute</string>
    <string name="start">Start</string>
    <string name="destination">Destination</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="calculate">Navigate!</string>
    <string name="calculation_failed">Unable to calculate the route. Are you online? Are you using an valid API key?
    </string>
    <string name="marker">Latitude: %1$s\nLongitude: %2$s</string>
    <string name="set_start">Set current location as starting point</string>
    <string name="set_destination">Set current location as destination</string>
    <string name="location_not_available">Location services not available.</string>
    <string name="location_denied">Access of the location is not allowed by the user.</string>
    <string name="permission_reason_title">Reason for permission</string>
    <string name="permission_reason_text">This app needs access to your location to fill your current location. Do you
        want to use that feature?
    </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="start_invalid">The position of the start is invalid.</string>
    <string name="destination_invalid">The position of the destination is invalid.</string>
    <string name="distance_invalid">The distance is too small. Please specify more distant positions.</string>
    <string name="route_overview">Route: %1$.2f kilometers (%2$.2f minutes)</string>
    <string name="step">Step %1$d of %2$d</string>
    <string name="profile">Profile</string>
    <string name="car">Car</string>
    <string name="bicycle">Bike</string>
    <string name="walking">Walking</string>
    <string name="show_instructions">Show instructions</string>
    <string name="instructions">Instructions</string>
</resources>
